# ne101

./: CMakeLists.txt  sdkconfig  sdkconfig.defaults
.github/workflows/: main.yml
components/esp32-camera/driver/: esp_camera.c
components/esp_littlefs/src/: esp_littlefs.c
components/halow/: CMakeLists.txt  Kconfig  idf_component.yml  mmhalow.c
components/halow/examples/dual_if/main/: idf_component.yml
components/halow/examples/iperf/: sdkconfig.defaults
components/halow/examples/iperf/main/: idf_component.yml
components/halow/examples/softap/: sdkconfig.defaults
components/halow/morse/: CMakeLists.txt
components/halow/morse/hostap/: CMakeLists.txt
components/halow/morse/mm-iot-sdk/framework/morselib/include/: mmhal_wlan.h
components/halow/morse/mm-iot-sdk/framework/src/hostap/: dpp_tcp_stubs.c  mmint_aes_wrap_shim.c  morse_dpp_s1g_shim.c
components/halow/morse/mm-iot-sdk/framework/src/hostap/src/utils/: ip_addr.c  morse.h
components/halow/morse/mm-iot-sdk/framework/src/mmregdb/: mmregdb.c  mmregdb.h
components/halow/morse/mm-iot-sdk/framework/src/mmutils/: mmutils_wlan.c
components/halow/morse/morseFirmware/: CMakeLists.txt  Kconfig  README.md
components/halow/morse/morseFirmware/mm6108/: bcf_fgh100maamd-quectel.mbin  bcf_fgh100maamd.mbin  bcf_fgh100mabmd-quectel.mbin  bcf_fgh100mabmd.mbin
components/halow/morse/morselib/: CMakeLists.txt  Kconfig
components/halow/morse/regdb/: CMakeLists.txt  Kconfig
components/halow/morse/shims/: CMakeLists.txt  Kconfig  mmhal_wlan.c  mmhal_wlan_binaries.c  mmhal_wlan_esp32.h  mmosal_shim_freertos_esp32.c
docs/: onboarding-json.md
main/: CMakeLists.txt  camera.c  cat1.c  config.c  config.h  debug.c  http.c  http_client.h  main.c  misc.c  misc.h  morse.c  morse.h  morse_dpp_cli.c  morse_dpp_cli.h  mqtt.c  mqtt.h  onboarding.c  onboarding.h  push.c  session_log.c  session_log.h  sleep.c  sleep.h  storage.c  storage.h  system.c  system.h  utils.c  utils.h  wifi.c  wifi.h
main/web/: index.html
main/web/src/: main.js
main/web/src/api/: index.js
main/web/src/components/: select.js
main/web/src/i18n/lang/: en_US.json  zh_CN.json
main/web/src/style/: capture.css  index.css
main/web/src/view/: capture.js  device.js  image.js  mqtt.js  wlan.js
