# Copyright 2026 Morse Micro
# SPDX-License-Identifier: Apache-2.0

# Define architecture specific paths and variables
if(${IDF_TARGET} STREQUAL "esp32s3")
	set(BFDNAME "elf32-xtensa-le")
	set(ARCH "xtensa")
elseif(${IDF_TARGET} STREQUAL "esp32c6")
	set(BFDNAME "elf32-littleriscv")
	set(ARCH "riscv")
elseif(${IDF_TARGET} STREQUAL "esp32c3")
	set(BFDNAME "elf32-littleriscv")
	set(ARCH "riscv")
else()
	message(FATAL_ERROR "Target ${IDF_TARGET} not known. Exiting...")
endif()

# Kconfig variables are used to determine which bcf file to add to the final
# application.
if(CONFIG_MMHAL_CHIP_TYPE_MM6108)
    set(MMIOT_BLOB_DIR "${CMAKE_CURRENT_LIST_DIR}/mm6108")
elseif(CONFIG_MMHAL_CHIP_TYPE_MM8108)
    set(MMIOT_BLOB_DIR "${CMAKE_CURRENT_LIST_DIR}/mm8108")
endif()

set(CONVERT_BIN_TO_MBIN
	"${MM_IOT_SDK}/framework/tools/buildsystem/convert-bin-to-mbin.py")

function(make_binary_object __file __prefix)
	get_filename_component(__file_name ${__file} NAME)
	# Keep generated objects under build/ so idf.py clean/fullclean removes them.
	set(__object ${CMAKE_CURRENT_BINARY_DIR}/${__file_name}.o)
	string(MAKE_C_IDENTIFIER ${__file} __file_c_identifier)
	add_custom_command(
		OUTPUT ${__object}
		COMMAND
			${CMAKE_OBJCOPY} -I binary -O ${BFDNAME} -B ${ARCH} ${__file}
			${__object} --redefine-sym
			_binary_${__file_c_identifier}_start=${__prefix}_start
			--redefine-sym _binary_${__file_c_identifier}_size=${__prefix}_size
			--redefine-sym _binary_${__file_c_identifier}_end=${__prefix}_end
			--rename-section
			.data=.rodata._fw_mbin,contents,alloc,load,readonly,data
		DEPENDS ${__file}
		COMMENT "Running objcopy on ${__file} to generate ${__object}"
	)
endfunction()

function(find_binary_blob FILE_VAR OBJ_VAR CONFIG_VAR)
	unset(${FILE_VAR} CACHE)

	set(_blob_name ${${CONFIG_VAR}})
	find_file(
		${FILE_VAR}
		NAMES ${_blob_name}
		PATHS ${MMIOT_BLOB_DIR}
		NO_DEFAULT_PATH
	)

	# mm6108 may ship ELF .bin blobs; convert to .mbin under build/ when needed.
	if(NOT ${FILE_VAR})
		string(REGEX REPLACE "\\.mbin$" ".bin" _elf_name "${_blob_name}")
		if(NOT _elf_name STREQUAL _blob_name)
			find_file(_elf_src NAMES ${_elf_name} PATHS ${MMIOT_BLOB_DIR} NO_DEFAULT_PATH)
			if(_elf_src)
				set(_mbin_out "${CMAKE_CURRENT_BINARY_DIR}/${_blob_name}")
				if(DEFINED PYTHON)
					set(_python "${PYTHON}")
				else()
					find_package(Python3 REQUIRED COMPONENTS Interpreter)
					set(_python "${Python3_EXECUTABLE}")
				endif()
				add_custom_command(
					OUTPUT ${_mbin_out}
					COMMAND ${_python} ${CONVERT_BIN_TO_MBIN} -o ${_mbin_out} ${_elf_src}
					DEPENDS ${_elf_src}
					COMMENT "Converting ${_elf_name} to ${_blob_name}"
					VERBATIM
				)
				set(${FILE_VAR} ${_mbin_out})
			endif()
		endif()
	endif()

	if(NOT ${FILE_VAR})
		file(GLOB _available "${MMIOT_BLOB_DIR}/*")
		message(FATAL_ERROR
			"Could not find ${CONFIG_VAR}='${_blob_name}' in ${MMIOT_BLOB_DIR}.\n"
			"Available files:\n  ${_available}\n"
			"Update sdkconfig (Morse Micro Firmware Configuration) or add the file."
		)
	endif()

	message(STATUS "${FILE_VAR}: ${${FILE_VAR}}")

	get_filename_component(_blob_basename ${${FILE_VAR}} NAME)
	set(${OBJ_VAR}
		"${CMAKE_CURRENT_BINARY_DIR}/${_blob_basename}.o"
		PARENT_SCOPE
	)
	set(${FILE_VAR} ${${FILE_VAR}} PARENT_SCOPE)
endfunction()

set(MORSE_BCF_MULTI_SRC "" CACHE INTERNAL "")
set(_morse_bcf_objs "")
set(_morse_bcf_blobs "")

if(CONFIG_MM_BCF_MULTI)
	# Embed N BCFs based on CONFIG_MM_BCF_EMBEDDED_LIST.
	# Format: "id:file,id:file,..."
	string(REPLACE "," ";" _bcf_entries "${CONFIG_MM_BCF_EMBEDDED_LIST}")
	set(_bcf_db_c "${CMAKE_CURRENT_BINARY_DIR}/mmhal_bcf_db.c")
	file(WRITE "${_bcf_db_c}"
		"/* Auto-generated by morseFirmware/CMakeLists.txt */\n"
		"#include <stdbool.h>\n"
		"#include <stdint.h>\n"
		"#include <stddef.h>\n"
		"#include <string.h>\n"
		"\n"
		"typedef struct { const char *id; const uint8_t *start; const uint8_t *end; } mmhal_bcf_entry_t;\n"
		"typedef struct { char cc[3]; const char *id; } mmhal_bcf_country_map_t;\n"
		"\n"
	)

	foreach(_entry IN LISTS _bcf_entries)
		string(STRIP "${_entry}" _entry)
		if(_entry STREQUAL "")
			continue()
		endif()
		string(REPLACE ":" ";" _parts "${_entry}")
		list(LENGTH _parts _nparts)
		if(NOT _nparts EQUAL 2)
			message(FATAL_ERROR "Invalid CONFIG_MM_BCF_EMBEDDED_LIST entry '${_entry}' (expected id:file)")
		endif()
		list(GET _parts 0 _id)
		list(GET _parts 1 _file)
		string(STRIP "${_id}" _id)
		string(STRIP "${_file}" _file)
		if(_id STREQUAL "" OR _file STREQUAL "")
			message(FATAL_ERROR "Invalid CONFIG_MM_BCF_EMBEDDED_LIST entry '${_entry}' (empty id or file)")
		endif()

		# Find blob path for this file under the selected chip directory.
		# NOTE: find_file() writes to the CMake cache by default; make sure each
		# iteration performs a fresh lookup (otherwise the first hit will be reused).
		unset(_blob_path CACHE)
		unset(_elf_src CACHE)
		set(_tmp_cfg "${_file}")
		find_file(_blob_path NAMES "${_tmp_cfg}" PATHS ${MMIOT_BLOB_DIR} NO_DEFAULT_PATH)
		if(NOT _blob_path)
			# Allow .bin -> .mbin conversion like find_binary_blob() does.
			string(REGEX REPLACE "\\.mbin$" ".bin" _elf_name "${_tmp_cfg}")
			if(NOT _elf_name STREQUAL _tmp_cfg)
				find_file(_elf_src NAMES "${_elf_name}" PATHS ${MMIOT_BLOB_DIR} NO_DEFAULT_PATH)
				if(_elf_src)
					set(_mbin_out "${CMAKE_CURRENT_BINARY_DIR}/${_tmp_cfg}")
					if(DEFINED PYTHON)
						set(_python "${PYTHON}")
					else()
						find_package(Python3 REQUIRED COMPONENTS Interpreter)
						set(_python "${Python3_EXECUTABLE}")
					endif()
					add_custom_command(
						OUTPUT ${_mbin_out}
						COMMAND ${_python} ${CONVERT_BIN_TO_MBIN} -o ${_mbin_out} ${_elf_src}
						DEPENDS ${_elf_src}
						COMMENT "Converting ${_elf_name} to ${_tmp_cfg}"
						VERBATIM
					)
					set(_blob_path "${_mbin_out}")
				endif()
			endif()
		endif()
		if(NOT _blob_path)
			file(GLOB _available "${MMIOT_BLOB_DIR}/*")
			message(FATAL_ERROR
				"Could not find embedded BCF file '${_file}' in ${MMIOT_BLOB_DIR}.\n"
				"Available files:\n  ${_available}\n"
				"Update CONFIG_MM_BCF_EMBEDDED_LIST or add the file."
			)
		endif()

		string(MAKE_C_IDENTIFIER "bcf_${_id}" _prefix)
		# Use a prefix-based output name to avoid collisions when reconfiguring or reusing the same
		# blob in multiple entries.
		set(_obj "${CMAKE_CURRENT_BINARY_DIR}/${_prefix}.o")
		list(APPEND _morse_bcf_objs "${_obj}")
		list(APPEND _morse_bcf_blobs "${_blob_path}")

		# Generate object with renamed symbols: <prefix>_start/end/size.
		string(MAKE_C_IDENTIFIER "${_blob_path}" _blob_c_identifier)
		add_custom_command(
			OUTPUT ${_obj}
			COMMAND
				${CMAKE_OBJCOPY} -I binary -O ${BFDNAME} -B ${ARCH} ${_blob_path}
				${_obj} --redefine-sym
				_binary_${_blob_c_identifier}_start=${_prefix}_start
				--redefine-sym _binary_${_blob_c_identifier}_size=${_prefix}_size
				--redefine-sym _binary_${_blob_c_identifier}_end=${_prefix}_end
				--rename-section
				.data=.rodata._fw_mbin,contents,alloc,load,readonly,data
			DEPENDS ${_blob_path}
			COMMENT "Running objcopy on ${_blob_path} to generate ${_obj}"
		)

		# Add extern declarations for this entry.
		file(APPEND "${_bcf_db_c}"
			"extern uint8_t ${_prefix}_start;\n"
			"extern uint8_t ${_prefix}_end;\n"
		)
	endforeach()

	# Emit the embedded BCF table.
	file(APPEND "${_bcf_db_c}" "\nstatic const mmhal_bcf_entry_t s_bcf_entries[] = {\n")
	foreach(_entry IN LISTS _bcf_entries)
		string(STRIP "${_entry}" _entry)
		if(_entry STREQUAL "")
			continue()
		endif()
		string(REPLACE ":" ";" _parts "${_entry}")
		list(GET _parts 0 _id)
		string(STRIP "${_id}" _id)
		string(MAKE_C_IDENTIFIER "bcf_${_id}" _prefix)
		file(APPEND "${_bcf_db_c}" "  { \"${_id}\", &${_prefix}_start, &${_prefix}_end },\n")
	endforeach()
	file(APPEND "${_bcf_db_c}" "};\n\n")

	# Emit the country->id map table.
	string(REPLACE "," ";" _cc_map "${CONFIG_MM_BCF_COUNTRY_MAP}")
	file(APPEND "${_bcf_db_c}" "static const mmhal_bcf_country_map_t s_country_map[] = {\n")
	foreach(_m IN LISTS _cc_map)
		string(STRIP "${_m}" _m)
		if(_m STREQUAL "")
			continue()
		endif()
		string(REPLACE "=" ";" _kv "${_m}")
		list(LENGTH _kv _kvn)
		if(NOT _kvn EQUAL 2)
			message(FATAL_ERROR "Invalid CONFIG_MM_BCF_COUNTRY_MAP entry '${_m}' (expected CC=id)")
		endif()
		list(GET _kv 0 _cc)
		list(GET _kv 1 _id)
		string(STRIP "${_cc}" _cc)
		string(STRIP "${_id}" _id)
		string(LENGTH "${_cc}" _cc_len)
		if(NOT _cc_len EQUAL 2)
			message(FATAL_ERROR "Invalid country code '${_cc}' in CONFIG_MM_BCF_COUNTRY_MAP (expected 2 chars)")
		endif()
		file(APPEND "${_bcf_db_c}" "  { \"${_cc}\", \"${_id}\" },\n")
	endforeach()
	file(APPEND "${_bcf_db_c}" "};\n\n")

	file(APPEND "${_bcf_db_c}"
		"static const char s_default_id[] = \"${CONFIG_MM_BCF_DEFAULT_ID}\";\n\n"
		"bool mmhal_bcf_lookup_span_by_id(const char *id, const uint8_t **start, const uint8_t **end)\n"
		"{\n"
		"  if (!id || !start || !end) return false;\n"
		"  for (size_t i = 0; i < (sizeof(s_bcf_entries)/sizeof(s_bcf_entries[0])); i++) {\n"
		"    if (strcmp(id, s_bcf_entries[i].id) == 0) { *start = s_bcf_entries[i].start; *end = s_bcf_entries[i].end; return true; }\n"
		"  }\n"
		"  return false;\n"
		"}\n\n"
		"const char *mmhal_bcf_map_country_to_id(const char *cc)\n"
		"{\n"
		"  if (cc && strlen(cc) >= 2) {\n"
		"    for (size_t i = 0; i < (sizeof(s_country_map)/sizeof(s_country_map[0])); i++) {\n"
		"      if (s_country_map[i].cc[0] == cc[0] && s_country_map[i].cc[1] == cc[1]) return s_country_map[i].id;\n"
		"    }\n"
		"  }\n"
		"  return s_default_id;\n"
		"}\n\n"
		"const char *mmhal_bcf_get_default_id(void) { return s_default_id; }\n"
	)

	set(MORSE_BCF_MULTI_SRC "${_bcf_db_c}" PARENT_SCOPE)
else()
	find_binary_blob(BCF_MBIN BCF_OBJ CONFIG_MM_BCF_FILE)
endif()
find_binary_blob(FW_MBIN FW_OBJ CONFIG_MM_FW_FILE)

make_binary_object(${FW_MBIN} firmware_binary)
if(CONFIG_MM_BCF_MULTI)
	# Objects were collected in _morse_bcf_objs; blobs were objcopy'd with prefixes bcf_<id>.
	add_custom_target(morsefirmware ALL DEPENDS ${FW_OBJ} ${_morse_bcf_objs})
else()
	make_binary_object(${BCF_MBIN} bcf_binary)
	add_custom_target(morsefirmware ALL DEPENDS ${FW_OBJ} ${BCF_OBJ})
endif()

add_library(morsefirmware_objs INTERFACE)
add_dependencies(morsefirmware_objs morsefirmware)
if(CONFIG_MM_BCF_MULTI)
	target_link_libraries(morsefirmware_objs INTERFACE "${FW_OBJ}" ${_morse_bcf_objs})
	set(MORSE_BCF_OBJ ${_morse_bcf_objs} PARENT_SCOPE)
else()
	target_link_libraries(morsefirmware_objs INTERFACE "${FW_OBJ}" "${BCF_OBJ}")
	set(MORSE_BCF_OBJ ${BCF_OBJ} PARENT_SCOPE)
endif()

set(MORSE_FW_OBJ ${FW_OBJ} PARENT_SCOPE)
